added headers and footers

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +12,26 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-        <!-- added links for style sheets -->
+    <!-- added links for style sheets -->
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/form.css">
 </head>
+
 <body>
+    <header>
+        <!-- light dark mode selector button -->
+        <button class="mode">Toggle Light/Dark Mode</button>
+    </header>
     
+    <!-- added footer -->
+    <footer>
+        <p>&copy; 2024</p>
+        <p>Developed by William Gallagher</p>
+        <a href="https://evildogma.github.io/portfolio-website/">Will's Portfolio</a>
+    </footer>
+
     <script src="js/form.js"></script>
-    <script src="js/logic.js"></script>  
+    <script src="js/logic.js"></script>
 </body>
+
 </html>
