--- a/blog.html
+++ b/blog.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- added Title -->
-        <title>Will's Blog</title>
-        <!-- added links for fonts -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-            rel="stylesheet">
-            <!-- added links for style sheets -->
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="stylesheet" href="css/blog.css">
+    <!-- added Title -->
+    <title>Will's Blog</title>
+    <!-- added links for fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <!-- added links for style sheets -->
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/blog.css">
 </head>
+
 <body>
-    
+    <header>
+        <h1>My First Blog</h1>
+        <!-- added button -->
+        <button id="backButton">Back</button>
+        <!-- light dark mode selector -->
+        <button class="mode">Toggle Light/Dark Mode</button>
+    </header>
+
+    <!-- added footer -->
+    <footer>
+        <p>&copy; 2024</p>
+        <p>Developed by William Gallagher</p>
+        <a href="https://evildogma.github.io/portfolio-website/">Will's Portfolio</a>
+    </footer>
+
     <script src="js/blog.js"></script>
     <script src="js/logic.js"></script>
 </body>
+
 </html>
