added main sections to both html pages

--- a/blog.html
+++ b/blog.html
@@ -19,12 +19,20 @@
 
 <body>
     <header>
-        <h1>My First Blog</h1>
+        <h1>Will's Blog</h1>
         <!-- added button -->
         <button id="backButton">Back</button>
         <!-- light dark mode selector -->
         <button class="mode">Toggle Light/Dark Mode</button>
     </header>
+
+    <main>
+        <!-- one column dynamically load/render posts from submissions on first page -->
+        <div id="blog">
+
+        </div>
+    </main>
+
 
     <!-- added footer -->
     <footer>
