added styling to the pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <!-- flex with 2 children -->
         <div class="wrapper">
             <div class="logo">
+                <h2>Will's Blog</h2>
                 <img src="assets/will-cats.jpg" alt="Will with some ominous cat doodles in the background">
             </div>
             <div class="form">
@@ -49,8 +50,8 @@
 
     <!-- added footer -->
     <footer>
-        <p>&copy; 2024</p>
         <p>Developed by William Gallagher</p>
+        <p>&copy; 2024</p>
         <a href="https://evildogma.github.io/portfolio-website/">Will's Portfolio</a>
     </footer>
 
