--- a/blog.html
+++ b/blog.html
@@ -13,8 +13,8 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <!-- added links for style sheets -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/blog.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/blog.css">
 </head>
 
 <body>
@@ -41,8 +41,8 @@
         <a href="https://evildogma.github.io/portfolio-website/">Will's Portfolio</a>
     </footer>
 
-    <script src="js/blog.js"></script>
-    <script src="js/logic.js"></script>
+    <script src="assets/js/blog.js"></script>
+    <script src="assets/js/logic.js"></script>
 </body>
 
 </html>
